# ChangeLog for dev-ruby/cerberus
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-ruby/cerberus/ChangeLog,v 1.12 2010/09/28 20:12:52 ranger Exp $

  28 Sep 2010; Brent Baude <ranger@gentoo.org> cerberus-0.7.8.ebuild:
  Marking cerberus-0.7.8 ~ppc for bug 319241

  22 Jun 2010; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  cerberus-0.7.8.ebuild:
  dev-util/subversion renamed to dev-vcs/subversion.

  05 Jun 2010; Hans de Graaff <graaff@gentoo.org> cerberus-0.7.8.ebuild:
  Add missing test dependency on subversion. Fixes #322661.

  05 Jun 2010; Hans de Graaff <graaff@gentoo.org> -cerberus-0.7.ebuild:
  Remove old version.

  22 May 2010; Diego E. Pettenò <flameeyes@gentoo.org>
  cerberus-0.7.6.ebuild:
  Various cleanups.

*cerberus-0.7.8 (11 May 2010)

  11 May 2010; Hans de Graaff <graaff@gentoo.org> +cerberus-0.7.8.ebuild:
  Version bump. Enable tests since we do have rubyzip available.

*cerberus-0.7.6 (27 Mar 2010)

  27 Mar 2010; Hans de Graaff <graaff@gentoo.org> +cerberus-0.7.6.ebuild:
  Version bump. Convert to ruby-fakegem.

  22 Aug 2009; Hans de Graaff <graaff@gentoo.org> -cerberus-0.3.4.ebuild:
  Remove old version.

*cerberus-0.7 (08 Aug 2009)

  08 Aug 2009; Hans de Graaff <graaff@gentoo.org> +cerberus-0.7.ebuild:
  Version bump.

  16 Jan 2008; Richard Brown <rbrown@gentoo.org> cerberus-0.3.4.ebuild:
  Add missing rake dependency, fixing Bug #206203

  04 Mar 2007; Tom Gall <tgall@gentoo.org> cerberus-0.3.4.ebuild:
  added ~ppc64

*cerberus-0.3.4 (17 Feb 2007)

  17 Feb 2007; Robin H. Johnson <robbat2@gentoo.org> +metadata.xml,
  +cerberus-0.3.4.ebuild:
  Initial commit. Ebuild by Robin H. Johnson <robbat2@gentoo.org>.
