@@ -1,6 +1,16 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 DIST cerberus-0.7.6.gem 254464 RMD160 cb9b3d0065c72bf99d8bab80ea062b6d4baaa420 SHA1 c839fe10c75443f9699240041c2e8c2b33737357 SHA256 6ff85294921a8e0ec3665dcbb91169ea3d810d272551c299643270ea50b80568
 DIST cerberus-0.7.8.gem 387072 RMD160 00905189d923cfba956b37ed8babdbf298d787d1 SHA1 4910ef8eec36f328a958b42084219001f0e4056a SHA256 c6a79fda47e52ee81e9102036702d79f8160374509923817fcf703fab9111516
 EBUILD cerberus-0.7.6.ebuild 957 RMD160 fd6b2278558c6c876b3543abd866ee5dbade9f60 SHA1 9524d66bde9a25c3635d930df86a5353678b5eb0 SHA256 9119d10ec11f75562c014e1b9cc3c3cf1c595d37e1ef2d9fa560cba81232aaf5
-EBUILD cerberus-0.7.8.ebuild 958 RMD160 80ad414fea7c0a28a1f8cdc462b9cc8832c5349f SHA1 d966c60ffeae9c8a3d48241391b411133b43da0f SHA256 0cdf66a162c036c011d6ec93ee2c3f7226f22376f9d0acce324fc391fd640c0c
-MISC ChangeLog 1738 RMD160 58ebf3a7f05bc4991465e45c1c81ae420e60f0be SHA1 3d65ac8012e6fa3db82490f7230b99e978cad931 SHA256 c06bbcaec39f54493a4e2dd5722e482f5fd81e5f1e458b501dabd483aaf5b09f
+EBUILD cerberus-0.7.8.ebuild 1038 RMD160 d3e283aaf81aa4353789ad574b8e3f66856e9b59 SHA1 bf76d014fed7130c41d7103828e048fb21970d70 SHA256 c342307bd2a24972e00cd1192eca49c525c8c23f5e112d0df1a4567d9e8fca19
+MISC ChangeLog 1883 RMD160 b9e584e4f7a77343334b5c01c67356f33c5905b4 SHA1 c0f93f65d47023e79518716d6dc970443cffafec SHA256 4b2723092c27e667580f6dbbafaf31f5736d0c294c39c32c5ec79d04ff6917d1
 MISC metadata.xml 158 RMD160 097f8145a9994f98be4971b43b23b9e5e8bccb66 SHA1 7ac646714b1ab83fda98f3ccdd8b48a31c148b27 SHA256 70b396ab3c7a63a81cb895b7728bd9eccdc9770afdb9919f2c54694b685f7032
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.16 (GNU/Linux)
+
+iF4EAREIAAYFAkzVJpYACgkQZihJkut28SuA+AD/aUOQLBaU5MNS9+fAthYQZ7OI
+amh0N0RaLeokxwoZ/58BAKwfaf2NdTPzZt1y2yN1AFjZoUf67UXnmz+iRFdYz9+E
+=Y6hS
+-----END PGP SIGNATURE-----
