@@ -1,6 +1,9 @@
 # ChangeLog for dev-ruby/cerberus
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/cerberus/ChangeLog,v 1.12 2010/09/28 20:12:52 ranger Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/cerberus/ChangeLog,v 1.13 2010/11/06 09:57:31 graaff Exp $
+
+  06 Nov 2010; Hans de Graaff <graaff@gentoo.org> cerberus-0.7.8.ebuild:
+  Add missing indirect dependency on dev-ruby/json, fixing bug 319241.
 
   28 Sep 2010; Brent Baude <ranger@gentoo.org> cerberus-0.7.8.ebuild:
   Marking cerberus-0.7.8 ~ppc for bug 319241
